Fixed verical spacing of reel, projects, and about sections

--- a/original_don'tuploadme/assets/css/main.css
+++ b/original_don'tuploadme/assets/css/main.css
@@ -83,7 +83,7 @@ input, select, textarea {
 	}
 
 	html, body {
-    background: #1c1d26;
+		background: #1c1d26;
 	}
 
 	body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -98,11 +98,11 @@ input, select, textarea {
 	}
 
 	body, input, select, textarea {
-    color: rgba(255, 255, 255, 0.75);
-    font-family: 'fieldwork', sans-serif;
-    font-size: 15pt;
-    font-weight: 100;
-    line-height: 1.75em;
+		color: rgba(255, 255, 255, 0.75);
+		font-family: "Roboto", Helvetica, sans-serif;
+		font-size: 15pt;
+		font-weight: 100;
+		line-height: 1.75em;
 	}
 
 	a {
@@ -122,7 +122,7 @@ input, select, textarea {
 
 	strong, b {
 		color: #ffffff;
-		font-weight: 600;
+		font-weight: 300;
 	}
 
 	em, i {
@@ -134,10 +134,10 @@ input, select, textarea {
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-    color: #ffffff;
-    font-weight: 300;
-    line-height: 1em;
-    margin: 0 0 1em 0;
+		color: #ffffff;
+		font-weight: 300;
+		line-height: 1em;
+		margin: 0 0 1em 0;
 	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -146,16 +146,14 @@ input, select, textarea {
 		}
 
 	h2 {
-    font-size: 5em;
-    /* [disabled]line-height: 1.5em; */
-    /* [disabled]letter-spacing: -0.025em; */
-    text-align: right;
+		font-size: 2em;
+		line-height: 1.5em;
+		letter-spacing: -0.025em;
 	}
 
 	h3 {
-    font-size: 1.35em;
-    line-height: 1.5em;
-    text-align: center;
+		font-size: 1.35em;
+		line-height: 1.5em;
 	}
 
 	h4 {
@@ -2935,7 +2933,7 @@ input, select, textarea {
 
 /* Goto Next */
 
-	section .goto-next {
+	.goto-next {
 		border: 0;
 		bottom: 0;
 		display: block;
@@ -2950,7 +2948,7 @@ input, select, textarea {
 		z-index: 1;
 	}
 
-		section .goto-next:before {
+		.goto-next:before {
 			background-image: url("images/arrow.svg");
 			background-position: center center;
 			background-repeat: no-repeat;
@@ -2965,21 +2963,17 @@ input, select, textarea {
 			width: 2em;
 			z-index: 1;
 		}
-		
-		header .goto-next:before {
-	
-		}
 
 /* Spotlight */
 
 	.spotlight {
-    background-attachment: fixed;
-    background-position: center center;
-    background-size: cover;
-    box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25);
-    height: 100vh;
-    overflow: hidden;
-    position: relative;
+		background-attachment: fixed;
+		background-position: center center;
+		background-size: cover;
+		box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25);
+		height: 100vh;
+		overflow: hidden;
+		position: relative;
 	}
 
 		.spotlight:nth-last-of-type(1) {
@@ -3065,7 +3059,7 @@ input, select, textarea {
 		.spotlight:before {
 			background-image: url("images/overlay.png");
 			content: '';
-/*			display: block;*/
+			display: block;
 			height: 100%;
 			left: 0;
 			top: 0;
@@ -3081,19 +3075,18 @@ input, select, textarea {
 			}
 
 		.spotlight .content {
-    -moz-transform: translate(0,-50%);
-    -webkit-transform: translate(0,-50%);
-    -ms-transform: translate(0,-50%);
-    transform: translate(0,-50%);
-    -moz-transition: -moz-transform 1s ease, opacity 1s ease;
-    -webkit-transition: -webkit-transform 1s ease, opacity 1s ease;
-    -ms-transition: -ms-transform 1s ease, opacity 1s ease;
-    transition: transform 1s ease, opacity 1s ease;
-    /*background: rgba(23, 24, 32, 0.95);
-			border-style: solid;*/
-    opacity: 1;
-    position: absolute;
-    top: 50%;
+			-moz-transform: translate(0,0);
+			-webkit-transform: translate(0,0);
+			-ms-transform: translate(0,0);
+			transform: translate(0,0);
+			-moz-transition: -moz-transform 1s ease, opacity 1s ease;
+			-webkit-transition: -webkit-transform 1s ease, opacity 1s ease;
+			-ms-transition: -ms-transform 1s ease, opacity 1s ease;
+			transition: transform 1s ease, opacity 1s ease;
+			background: rgba(23, 24, 32, 0.95);
+			border-style: solid;
+			opacity: 1;
+			position: absolute;
 		}
 
 		.spotlight .goto-next {
@@ -3113,12 +3106,9 @@ input, select, textarea {
 		}
 
 		.spotlight.top .content, .spotlight.bottom .content {
-    left: 0;
-    padding-top: 5.1em;
-    padding-right: 0;
-    padding-left: 0;
-    padding-bottom: 3.1em;
-    width: 100%;
+			left: 0;
+			padding: 5.1em 0 3.1em 0;
+			width: 100%;
 		}
 
 		.spotlight.top .content {
@@ -3380,21 +3370,20 @@ input, select, textarea {
 /* Header */
 
 	#page-wrapper {
-    /* [disabled]padding-top: 3.5em; */
+		padding-top: 3.5em;
 	}
 
 	#header {
-    /* [disabled]background: rgba(39, 40, 51, 0.965); */
-    /* [disabled]box-shadow: 0 0 0.25em 0 rgba(0, 0, 0, 0.25); */
-    cursor: default;
-    height: 3.5em;
-    left: 0;
-    line-height: 3.5em;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 100;
-    /* [disabled]-webkit-box-shadow: 0 0 0.25em 0 rgba(0, 0, 0, 0.25); */
+		background: rgba(39, 40, 51, 0.965);
+		box-shadow: 0 0 0.25em 0 rgba(0, 0, 0, 0.25);
+		cursor: default;
+		height: 3.5em;
+		left: 0;
+		line-height: 3.5em;
+		position: fixed;
+		top: 0;
+		width: 100%;
+		z-index: 100;
 	}
 
 		#header h1 {
@@ -3453,25 +3442,24 @@ input, select, textarea {
 	}
 
 	body.landing #header {
-    background: transparent;
-    box-shadow: none;
-    position: fixed;
+		background: transparent;
+		box-shadow: none;
+		position: absolute;
 	}
 
 /* Banner */
 
 	#banner {
-    background-attachment: fixed;
-    background-color: #272833;
-    background-image: url(../../images/Main_BG.png);
-    background-position: center center;
-    background-size: cover;
-    /* [disabled]box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25); */
-    min-height: 100vh;
-    position: relative;
-    text-align: left;
-    z-index: 21;
-    /* [disabled]-webkit-box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25); */
+		background-attachment: fixed;
+		background-color: #272833;
+		background-image: url("../../images/banner.jpg");
+		background-position: center center;
+		background-size: cover;
+		box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25);
+		min-height: 100vh;
+		position: relative;
+		text-align: center;
+		z-index: 21;
 	}
 
 		#banner:before {
@@ -3483,7 +3471,7 @@ input, select, textarea {
 		}
 
 		#banner:after {
-			/*background-image: -moz-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
+			background-image: -moz-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
 			background-image: -webkit-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
 			background-image: -ms-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
 			background-image: linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
@@ -3493,28 +3481,28 @@ input, select, textarea {
 			left: 0;
 			position: absolute;
 			top: 0;
-			width: 100%;*/
+			width: 100%;
 		}
 
 		#banner .content {
-    display: inline-block;
-    margin-right: 1%;
-    max-width: 95%;
-    padding: 6em;
-    position: relative;
-    vertical-align: middle;
-    z-index: 1;
+			display: inline-block;
+			margin-right: 1%;
+			max-width: 95%;
+			padding: 6em;
+			position: relative;
+			text-align: right;
+			vertical-align: middle;
+			z-index: 1;
 		}
 
 			#banner .content header {
-    display: inline-block;
-    vertical-align: middle;
-    text-align: right;
+				display: inline-block;
+				vertical-align: middle;
 			}
 
 				#banner .content header h2 {
-    font-size: 5em;
-    margin: 0;
+					font-size: 2.5em;
+					margin: 0;
 				}
 
 				#banner .content header p {
